include/affineui/c_api_app.h


typedef struct affineui_app      affineui_app;
typedef struct affineui_view     affineui_view;
typedef struct affineui_color {
    uint8_t r, g, b, a;
} affineui_color;
typedef struct affineui_dispatch_result {
    int redraw_requested;
    int invalidate_view;
    int defer_widget_changes;
    int layout_changed;
    int event_consumed;
} affineui_dispatch_result;
typedef struct affineui_app_config {
    const char*        title;                
    int                width, height;        
    affineui_color     clear_color;          
    int                high_dpi;             
    int                vsync;                
    const char*        default_font_family;  
    int                default_font_size;    
    const char* const* asset_folders;        
    size_t             asset_folder_count;
    int                perf_overlay;         
    int                no_bundle_decius;     
    int                native_menus;         
    int                titlebar;             
    int                traffic_light_x, traffic_light_y;
} affineui_app_config;
typedef enum affineui_titlebar_style {
    AFFINEUI_TITLEBAR_DEFAULT      = 0,  
    AFFINEUI_TITLEBAR_HIDDEN       = 1,  
    AFFINEUI_TITLEBAR_HIDDEN_INSET = 2,  
    AFFINEUI_TITLEBAR_FRAMELESS    = 3,  
} affineui_titlebar_style;
AFFINEUI_C_API void affineui_app_config_init(affineui_app_config* cfg);
AFFINEUI_C_API affineui_app* affineui_app_create(const affineui_app_config* cfg);
AFFINEUI_C_API void          affineui_app_destroy(affineui_app* app);
AFFINEUI_C_API void affineui_app_load_html(affineui_app* app, const char* html);
AFFINEUI_C_API int  affineui_app_load_html_file(affineui_app* app, const char* path);
AFFINEUI_C_API void affineui_app_load_view(affineui_app* app, const affineui_view* view);
AFFINEUI_C_API void affineui_app_set_stylesheet(affineui_app* app,
                                                const char* css,
                                                const char* base_url);
AFFINEUI_C_API void affineui_app_invalidate(affineui_app* app);
AFFINEUI_C_API void affineui_app_set_perf_overlay_enabled(affineui_app* app, int enabled);
AFFINEUI_C_API int  affineui_app_perf_overlay_enabled(const affineui_app* app);
AFFINEUI_C_API int  affineui_app_dispatch(affineui_app* app, const affineui_event* ev);
AFFINEUI_C_API void affineui_app_on_event_capture(
    affineui_app* app,
    affineui_event_capture_fn fn,
    void* user,
    affineui_user_free_fn user_free);
AFFINEUI_C_API int  affineui_app_run(affineui_app* app);
AFFINEUI_C_API void affineui_app_quit(affineui_app* app, int code);
typedef int (*affineui_close_request_fn)(void* user);
AFFINEUI_C_API void affineui_app_on_close_request(
    affineui_app* app,
    affineui_close_request_fn fn,
    void* user,
    affineui_user_free_fn user_free);
AFFINEUI_C_API void affineui_app_close(affineui_app* app);
AFFINEUI_C_API void affineui_app_minimize(affineui_app* app);
AFFINEUI_C_API void affineui_app_toggle_maximize(affineui_app* app);
AFFINEUI_C_API int  affineui_app_is_maximized(const affineui_app* app);
AFFINEUI_C_API void affineui_app_set_fullscreen(affineui_app* app, int on);
AFFINEUI_C_API int  affineui_app_is_fullscreen(const affineui_app* app);
typedef struct affineui_menu affineui_menu;
typedef void (*affineui_menu_select_fn)(void* user);
AFFINEUI_C_API affineui_menu* affineui_menu_create(void);
AFFINEUI_C_API void           affineui_menu_destroy(affineui_menu* menu);
AFFINEUI_C_API affineui_menu* affineui_menu_add_submenu(affineui_menu* parent,
                                                        const char* label);
AFFINEUI_C_API void affineui_menu_add_item(affineui_menu* menu,
                                           const char* label,
                                           const char* accelerator,
                                           affineui_menu_select_fn fn,
                                           void* user,
                                           affineui_user_free_fn user_free);
AFFINEUI_C_API void affineui_app_set_menu(affineui_app* app,
                                          const affineui_menu* menu);