bindings/csharp/AffineUI/NativeMethods.cs

// Raw P/Invoke surface, 1:1 with include/affineui/c_api.h (embedded surface +
// shared value types) and include/affineui/c_api_app.h (app surface).
//
// Conventions (docs/LANGUAGE_BINDINGS.md §3):
//   - Opaque handles cross as IntPtr; the idiomatic layer wraps them in
//     SafeHandle subclasses.
//   - Strings IN are UTF-8 (source-generated marshalling); null means "empty"
//     and is always accepted by the native side.
//   - Strings OUT are returned as IntPtr; the caller copies them with
//     AffineUIRuntime.TakeString, which frees via affineui_string_free.
//     (Exception: affineui_version returns a borrowed static string.)
//   - Callback registrations take (fn, user, user_free) as raw pointers;
//     see Trampolines in AffineUIRuntime.cs.

using System.Runtime.InteropServices;

namespace AffineUI;

// ── Native POD structs (layouts mirror the C headers exactly) ────────────

[StructLayout(LayoutKind.Sequential)]
internal struct NativeColor
{
    public byte R, G, B, A;
}

/// <summary>Mirrors <c>affineui_event</c>.</summary>
[StructLayout(LayoutKind.Sequential)]
internal struct NativeEvent
{
    public int Type;       // affineui_event_type
    public int X, Y;
    public int Button;     // affineui_mouse_button
    public float WheelDx, WheelDy;
    public int Key;        // affineui_key
    public int KeyCode;
    public IntPtr Text;    // const char* (UTF-8, may be null)
    public int Shift, Ctrl, Alt, SuperKey;
    // COMPOSITION only — byte offsets into Text (see c_api.h).
    public int CompositionCursor;
    public int CompositionClauseBegin;
    public int CompositionClauseEnd;
}

/// <summary>Mirrors <c>affineui_dispatch_result</c>.</summary>
[StructLayout(LayoutKind.Sequential)]
internal struct NativeDispatchResult
{
    public int RedrawRequested;
    public int InvalidateView;
    public int DeferWidgetChanges;
    public int LayoutChanged;
    public int EventConsumed;
}

/// <summary>Mirrors <c>affineui_app_config</c>.</summary>
[StructLayout(LayoutKind.Sequential)]
internal struct NativeAppConfig
{
    public IntPtr Title;               // const char*
    public int Width, Height;
    public NativeColor ClearColor;
    public int HighDpi;
    public int Vsync;
    public IntPtr DefaultFontFamily;   // const char*
    public int DefaultFontSize;
    public IntPtr AssetFolders;        // const char* const*
    public nuint AssetFolderCount;
    public int PerfOverlay;
    public int NoBundleDecius;
    public int NativeMenus;            // 0/1, default 1
    public int Titlebar;               // affineui_titlebar_style
    public int TrafficLightX, TrafficLightY;
}

/// <summary>Mirrors <c>affineui_gpu_context</c>.</summary>
[StructLayout(LayoutKind.Sequential)]
internal struct NativeGpuContext
{
    public int Backend;                // affineui_backend
    public IntPtr D3D11Device;
    public IntPtr D3D11DeviceContext;
    public IntPtr MetalDevice;
    public IntPtr WgpuDevice;
    public int ColorFormat;            // affineui_pixel_format
    public int DepthFormat;            // affineui_pixel_format
    public int SampleCount;
}

/// <summary>Mirrors <c>affineui_init_desc</c>.</summary>
[StructLayout(LayoutKind.Sequential)]
internal struct NativeInitDesc
{
    public IntPtr Gpu;                 // const affineui_gpu_context*
    public IntPtr Allocator;           // const affineui_allocator* (unused from C#)
    public IntPtr Log;                 // affineui_log_fn
    public IntPtr LogUser;
    public IntPtr DefaultFontFamily;   // const char*
    public int DefaultFontSize;
}

/// <summary>Mirrors <c>affineui_frame_target</c>.</summary>
[StructLayout(LayoutKind.Sequential)]
internal struct NativeFrameTarget
{
    public int Width, Height;
    public float DpiScale;
    public int SampleCount;
    public int Clear;
    public int ViewportX, ViewportY, ViewportW, ViewportH;
    public IntPtr D3D11RenderView;
    public IntPtr D3D11ResolveView;
    public IntPtr D3D11DepthStencilView;
    public IntPtr MetalCurrentDrawable;
    public IntPtr MetalDepthStencilTexture;
    public IntPtr MetalMsaaColorTexture;
    public IntPtr WgpuRenderView;
    public IntPtr WgpuResolveView;
    public IntPtr WgpuDepthStencilView;
    public uint GlFramebuffer;
}

internal static partial class NativeMethods
{
    internal const string Lib = "affineui_c";

    // ── c_api.h — misc / versioning ──────────────────────────────────────

    [LibraryImport(Lib)]
    internal static partial int affineui_c_abi_version();

    /// <remarks>Returns a BORROWED static string — do not free.</remarks>
    [LibraryImport(Lib)]
    internal static partial IntPtr affineui_version();

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int affineui_run_html(string? html);

    [LibraryImport(Lib)]
    internal static partial void affineui_string_free(IntPtr s);

    // ── c_api.h — embedded surface (affineui_ui_*) ───────────────────────

    [LibraryImport(Lib)]
    internal static partial IntPtr affineui_ui_create();

    [LibraryImport(Lib)]
    internal static partial void affineui_ui_destroy(IntPtr ui);

    [LibraryImport(Lib)]
    internal static partial void affineui_ui_init(IntPtr ui, in NativeInitDesc desc);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void affineui_ui_set_html(IntPtr ui, string? html);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void affineui_ui_set_css(IntPtr ui, string? css);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int affineui_ui_load_file(IntPtr ui, string? path);

    [LibraryImport(Lib)]
    internal static partial void affineui_ui_set_clear_color(IntPtr ui, byte r, byte g, byte b, byte a);

    [LibraryImport(Lib)]
    internal static partial void affineui_ui_render(IntPtr ui, in NativeFrameTarget target);

    [LibraryImport(Lib)]
    internal static partial int affineui_ui_dispatch(IntPtr ui, in NativeEvent ev);

    [LibraryImport(Lib)]
    internal static partial void affineui_ui_on_event_capture(
        IntPtr ui, IntPtr fn, IntPtr user, IntPtr userFree);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void affineui_ui_on_click(IntPtr ui, string? selector,
                                                      IntPtr fn, IntPtr user, IntPtr userFree);

    [LibraryImport(Lib)]
    internal static partial int affineui_ui_hovered_cursor(IntPtr ui);

    [LibraryImport(Lib)]
    internal static partial int affineui_ui_text_input_active(IntPtr ui);

    [LibraryImport(Lib)]
    internal static partial void affineui_ui_caret_rect(IntPtr ui,
                                                        out int outX, out int outY,
                                                        out int outW, out int outH);

    [LibraryImport(Lib)]
    internal static partial void affineui_ui_set_caret_blink_interval(IntPtr ui, double milliseconds);

    [LibraryImport(Lib)]
    internal static partial double affineui_ui_caret_blink_interval(IntPtr ui);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int affineui_ui_set_attr(IntPtr ui, string? elemId, string? name, string? value);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int affineui_ui_remove_attr(IntPtr ui, string? elemId, string? name);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int affineui_ui_set_text(IntPtr ui, string? elemId, string? text);

    [LibraryImport(Lib)]
    internal static partial void affineui_ui_content_size(IntPtr ui, out int outW, out int outH);

    [LibraryImport(Lib)]
    internal static partial int affineui_ui_needs_update(IntPtr ui);

    [LibraryImport(Lib)]
    internal static partial void affineui_ui_mark_dirty(IntPtr ui);

    [LibraryImport(Lib)]
    internal static partial void affineui_ui_reset(IntPtr ui);

    // ── c_api_app.h — App ────────────────────────────────────────────────

    [LibraryImport(Lib)]
    internal static partial void affineui_app_config_init(ref NativeAppConfig cfg);

    [LibraryImport(Lib)]
    internal static partial IntPtr affineui_app_create(in NativeAppConfig cfg);

    [LibraryImport(Lib)]
    internal static partial void affineui_app_destroy(IntPtr app);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void affineui_app_load_html(IntPtr app, string? html);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int affineui_app_load_html_file(IntPtr app, string? path);

    [LibraryImport(Lib)]
    internal static partial void affineui_app_load_view(IntPtr app, IntPtr view);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void affineui_app_set_stylesheet(IntPtr app, string? css, string? baseUrl);

    [LibraryImport(Lib)]
    internal static partial void affineui_app_invalidate(IntPtr app);

    [LibraryImport(Lib)]
    internal static partial void affineui_app_set_perf_overlay_enabled(IntPtr app, int enabled);

    [LibraryImport(Lib)]
    internal static partial int affineui_app_perf_overlay_enabled(IntPtr app);

    [LibraryImport(Lib)]
    internal static partial int affineui_app_dispatch(IntPtr app, in NativeEvent ev);

    [LibraryImport(Lib)]
    internal static partial void affineui_app_on_event_capture(
        IntPtr app, IntPtr fn, IntPtr user, IntPtr userFree);

    [LibraryImport(Lib)]
    internal static partial int affineui_app_run(IntPtr app);

    [LibraryImport(Lib)]
    internal static partial void affineui_app_quit(IntPtr app, int code);

    /// <remarks>The handler returns 0 to CANCEL the close; fn = null clears it.</remarks>
    [LibraryImport(Lib)]
    internal static partial void affineui_app_on_close_request(
        IntPtr app, IntPtr fn, IntPtr user, IntPtr userFree);

    // ── c_api_app.h — Window controls ────────────────────────────────────

    [LibraryImport(Lib)]
    internal static partial void affineui_app_close(IntPtr app);

    [LibraryImport(Lib)]
    internal static partial void affineui_app_minimize(IntPtr app);

    [LibraryImport(Lib)]
    internal static partial void affineui_app_toggle_maximize(IntPtr app);

    [LibraryImport(Lib)]
    internal static partial int affineui_app_is_maximized(IntPtr app);

    [LibraryImport(Lib)]
    internal static partial void affineui_app_set_fullscreen(IntPtr app, int on);

    [LibraryImport(Lib)]
    internal static partial int affineui_app_is_fullscreen(IntPtr app);

    // ── c_api_app.h — Application menu ───────────────────────────────────
    //
    // A build-then-install builder: create a root menu, add into it, hand it to
    // affineui_app_set_menu (which COPIES it), destroy it. The copy shares each
    // item's (fn, user, user_free) closure, so a GCHandle passed here survives
    // the builder's destruction and is released exactly once, when the core
    // drops the last reference to the handler.

    [LibraryImport(Lib)]
    internal static partial IntPtr affineui_menu_create();

    [LibraryImport(Lib)]
    internal static partial void affineui_menu_destroy(IntPtr menu);

    /// <remarks>The returned handle is OWNED BY <paramref name="parent"/> — add
    /// into it, but never destroy it.</remarks>
    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_menu_add_submenu(IntPtr parent, string? label);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void affineui_menu_add_item(
        IntPtr menu, string? label, string? accelerator,
        IntPtr fn, IntPtr user, IntPtr userFree);
